fix winning numbers
